--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,20 @@
 [package]
 name = "hlbc-python"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2018"
 
 [lib]
 name = "hlbc"
-# "cdylib" is necessary to produce a shared library for Python to import from.
-#
-# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
-# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
-# crate-type = ["cdylib", "rlib"]
 crate-type = ["cdylib"]
 
 [dependencies]
-hlbc = "0.7.0"
 hlbc-decompiler = "0.7.0"
 lazy_static = "1.5.0"
+hlbc = { git = "https://github.com/N3rdL0rd/hlbc.git", branch = "clone" }
 
 [dependencies.pyo3]
 version = "0.15.1"
 features = ["extension-module"]
+
+[patch.crates-io]
+hlbc = { git = "https://github.com/N3rdL0rd/hlbc.git", branch = "clone" }
